Recibir datos para inscripcion

--- a/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/list_inscripcion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/list_inscripcion.html.twig
@@ -41,7 +41,7 @@
             <th>Nombre</th>
             <th><abbr title="Categoría" class="visible-xs">Cat.</abbr><div class="hidden-xs">Categoría</div></th>
             <th><abbr title="Pruebas" class="visible-xs">Pru.</abbr><div class="hidden-xs">Pruebas</div></th>
-            <th class="hidden-xs">Coste total</th>
+            <th class="hidden-xs">Precio total</th>
             <th>Estado</th>
             <th class="hidden-xs">Dorsal</th>
             <th class="hidden-xs">Asistencia</th>
@@ -88,7 +88,7 @@
                         <th class="hidden-xs">Fecha de inscripción</th>
                         <th class="hidden-xs">Inscrito por</th>
                         <th class="hidden-xs">Código de grupo</th>
-                        <th class="hidden-xs">Coste</th>
+                        <th class="hidden-xs">Precio</th>
                         <th>Estado</th>
                         <th class="hidden-xs">Registros</th>
                         <th>Registrar marca</th>
