--- a/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/sel_pruebas_data.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/sel_pruebas_data.html.twig
@@ -1,7 +1,7 @@
             <tbody>
                <tr>
                   <th>Prueba</th>
-                  <th class="hidden-xs">Coste</th>
+                  <th class="hidden-xs">Precio</th>
                   <th><abbr title="Selección" class="visible-xs-block">Sel.</abbr><div class="hidden-xs">Selección</div></th>
                </tr>
                {% for pru in listaPru %}
