--- a/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/sel_confirmar.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/sel_confirmar.html.twig
@@ -1,4 +1,37 @@
-   {{ dump(data) }}
+   {% if codGrupo is defined %}
+      <h4>Inscripción grupal: {{ codGrupo }}</h4>
+   {% endif %}
+   {% set precioTotal = 0 %}
+   <table class="table table-hover table-bordered table-condensed table-striped table-responsive">
+      <tbody>
+         <tr>
+            <th>Atleta</th>
+            <th>Prueba</th>
+            <th class="hidden-xs">Precio estandar</th>
+            <th>Precio</th>
+            <th><abbr title="Confirmar" class="visible-xs-block">Conf.</abbr><div class="hidden-xs">Confirmar</div></th>
+         </tr>
+         {% for ent in entradas %}
+            {% if ent.pru.sidTprm.sexo == 0 %}
+               {% set tpr = ent.pru.sidTprm.sidTprf.nombre ~ '. Masculino, ' ~ ent.pru.sidTprm.entorno %}
+            {% elseif ent.pru.sidTprm.sexo == 1 %}
+               {% set tpr = ent.pru.sidTprm.sidTprf.nombre ~ '. Femenino, ' ~ ent.pru.sidTprm.entorno %}
+            {% endif %}
+            {% set precioTotal = precioTotal + ent.pru.coste %}
+            <tr id="tr-{{ ent.atl.id }}-{{ ent.pru.sid }}">
+               <td>{{ ent.atl.apellidos }}, {{ ent.atl.nombre }}</td>
+               <td>{{ tpr }}</td>
+               <td class="hidden-xs">{{ ent.pru.coste|number_format(2, ',', '.') }}€</td>
+               <td><div class="input-group"><input id="coste-{{ ent.atl.id }}-{{ ent.pru.sid }}" type="number" class="form-control coste-ins" value="{{ ent.pru.coste }}" onInput="updateCosteTotal()"><span class="input-group-addon">€</span></div></td>
+               <td><input id="cb-{{ ent.atl.id }}-{{ ent.pru.sid }}" type="checkbox" checked onClick="toggleConfRow(this)"></button></td>
+            </tr>
+         {% endfor %}
+         <tr>
+            <td colspan="3" class="text-right hidden-xs"><strong>Precio total: </strong></td>
+            <td colspan="2" class="text-right visible-xs"><strong>Precio total: </strong></td>
+            <td><strong id="coste-total">{{ precioTotal|number_format(2, ',', '.') }}€</strong></td>
+            <td></td>
+         </tr>
+      </tbody>
+   </table>
    
-   
-      
