--- a/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/sel_confirmar.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/sel_confirmar.html.twig
@@ -35,3 +35,8 @@
       </tbody>
    </table>
    
+   <div class="pull-right">
+      <button id="btn-inscribir" type="button" class="btn btn-lg btn-primary" onClick=""><span class="glyphicon glyphicon-save"></span> Inscribir</button>
+   </div>
+   
+   
