--- a/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/sel_pruebas_data.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/sel_pruebas_data.html.twig
@@ -2,7 +2,7 @@
                <tr>
                   <th>Prueba</th>
                   <th class="hidden-xs">Precio</th>
-                  <th><abbr title="Selección" class="visible-xs-block">Sel.</abbr><div class="hidden-xs">Selección</div></th>
+                  <th><abbr title="Selección" class="visible-xs-block">Selec.</abbr><div class="hidden-xs">Selección</div></th>
                </tr>
                {% for pru in listaPru %}
                   {% if pru.sidTprm.sexo == 0 %}
