--- a/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/edit_inscripcion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/edit_inscripcion.html.twig
@@ -8,9 +8,9 @@
 {#{ form_start(form, {'action': path('crear_tipopruebaformato'), 'attr': {'novalidate': 'novalidate'}}) }#}
 
 {% if mode == "edit" %}
-{{ form_start(form, {'action': path('editar_inscripcion', {'sidCom': sidCom})}) }}
+{{ form_start(form, {'action': path('editar_inscripcion', {'sidCom': sidCom, 'atl': idAtl})}) }}
 {% elseif mode == "del" %}
-{{ form_start(form, {'action': path('editar_inscripcion', {'sidCom': sidCom})}) }}
+{{ form_start(form, {'action': path('editar_inscripcion', {'sidCom': sidCom, 'atl': idAtl})}) }}
 {% endif %}
 
     {{ form_errors(form) }}
@@ -20,11 +20,10 @@
        <div class="panel-body">
           <table class="table-responsive table-condensed">
              <tbody id="form-collection">
-                <tr><th>Precio</th><th>Estado</th><th></th></tr>
-                {{ dump(form.inscripciones) }}
+                <tr><th>Prueba</th><th>Precio</th><th>Estado</th><th></th></tr>
                 {% for ins in form.inscripciones %}
                 <tr class="subform-row">
-                   <td>TEST</td>
+                   <td>{{ ins.vars.value.sidPru.sidTprm.sidTprf.nombre }}. {% if ins.vars.value.sidPru.sidTprm.sexo == 0 %}Masculino, {% elseif ins.vars.value.sidPru.sidTprm.sexo == 1 %}Femenino, {% endif%}{{ ins.vars.value.sidPru.sidTprm.entorno }}</td>
                    {% if mode == "edit" %}
                    <td>{{ form_widget(ins.coste) }}{{ form_errors(ins.coste) }}</td>
                    <td>{{ form_widget(ins.estado) }}{{ form_errors(ins.estado) }}</td>
