--- a/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/list_inscripcion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/list_inscripcion.html.twig
@@ -67,13 +67,13 @@
                   <button type="button" class="btn btn-xs btn-block btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-option-horizontal" aria-label="Acciones"></span></button>
                   <ul class="dropdown-menu pull-right">
                      {% if atl.sidPar is defined %}<li><a id="asistLI-{{ atl.id }}" href="#" onClick="toggleAsist(this, {{ atl.sidPar }})">{% if atl.asistencia == true %}<span class="glyphicon glyphicon-check"></span> Asistencia [SI]{% else %}<span class="glyphicon glyphicon-unchecked"></span> Asistencia [NO]{% endif %}</a></li>{% endif %}
-                     <li><a href="#" onClick="showModal('newPAR', {{ atl.id }}, null, null)"><span class="glyphicon glyphicon-bullhorn"></span> {% if atl.sidPar is not defined %}Confirmar participación{% else %}Cambiar dorsal{% endif %}</a></li>
+                     <li><a href="#" onClick="showModal('newPAR', {{ atl.id }}, {% if atl.sidPar is not defined %}'Confirmar participación'{% else %}'Cambiar dorsal'{% endif %}, null)"><span class="glyphicon glyphicon-bullhorn"></span> {% if atl.sidPar is not defined %}Confirmar participación{% else %}Cambiar dorsal{% endif %}</a></li>
                      <li><a href="#" onClick="showModal('ediINS', {{ atl.id }}, null, null)"><span class="glyphicon glyphicon-edit"></span> Editar</a></li>
                      <li><a class="bg-danger" href="#" onClick="showModal()"><div class="text-danger"><span class="glyphicon glyphicon-remove-circle"></span> Desinscribir</div></a></li>
                   </ul>
                </div>
                <div class="hidden-xs">
-                  <button type="button" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="top" title="{% if atl.sidPar is not defined %}Confirmar participación{% else %}Cambiar dorsal{% endif %}" onClick="showModal('newPAR', {{ atl.id }}, null, null)"><span class="glyphicon glyphicon-bullhorn"></span></button>
+                  <button type="button" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="top" title="{% if atl.sidPar is not defined %}Confirmar participación{% else %}Cambiar dorsal{% endif %}" onClick="showModal('newPAR', {{ atl.id }}, {% if atl.sidPar is not defined %}'Confirmar participación'{% else %}'Cambiar dorsal'{% endif %}, null)"><span class="glyphicon glyphicon-bullhorn"></span></button>
                   <button type="button" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="top" title="Editar" onClick="showModal('ediINS', {{ atl.id }}, null, null)"><span class="glyphicon glyphicon-edit"></span></button>
                   <button disabled type="button" class="btn btn-xs btn-danger" data-toggle="tooltip" data-placement="top" title="Desinscribir" onClick="showModal()"><span class="glyphicon glyphicon-remove-circle"></span></button>
                </div>
@@ -90,19 +90,19 @@
                         <th class="hidden-xs">Código de grupo</th>
                         <th class="hidden-xs">Precio</th>
                         <th>Estado</th>
-                        <th class="hidden-xs">Registros</th>
-                        <th>Registrar marca</th>
+                        <th>Registros</th>
+                        <th class="hidden-xs">Registrar marca</th>
                      </tr>
                      {% for ins in atl.pruebas %}
                         <tr>
                            <td><span class="glyphicon glyphicon-chevron-right"></span> {{ ins.nombre }}. {% if ins.sexo == 0 %}Masculino, {% elseif ins.sexo == 1 %}Femenino, {% endif%}{{ ins.entorno }}</td>
                            <td class="hidden-xs">{{ ins.fecha|date('d/m/Y') }}</td>
                            <td class="hidden-xs">{{ ins.origen }}</td>
-                           <td class="hidden-xs">{{ ins.codGrupo }}</td>
+                           <td class="hidden-xs">{% if ins.codGrupo is not null %}{{ ins.codGrupo }} <button type="button" class="btn btn-xs btn-default pull-right" data-toggle="tooltip" data-placement="top" title="Mostrar grupo" onClick="showModal()"><span class="glyphicon glyphicon-info-sign"></span></button>{% endif %}</td>
                            <td class="hidden-xs">{{ ins.coste|number_format(2, ',', '.') }}€</td>
                            <td>{{ ins.estado }}</td>
-                           <td class="hidden-xs">0</td>
-                           <td><button disabled type="button" class="btn btn-xs btn-block btn-default" onClick="showModal()"><span class="glyphicon glyphicon-dashboard" aria-label="Registrar marcas"></span></button></td>
+                           <td>0 <button disabled type="button" class="btn btn-xs btn-default pull-right visible-xs" onClick="showModal()"><span class="glyphicon glyphicon-dashboard" aria-label="Registrar marcas"></span></button></td>
+                           <td class="hidden-xs"><button disabled type="button" class="btn btn-xs btn-block btn-default" onClick="showModal()"><span class="glyphicon glyphicon-dashboard" aria-label="Registrar marcas"></span></button></td>
                         </tr>
                      {% endfor %}
                   </tbody>
