--- a/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/edit_inscripcion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/edit_inscripcion.html.twig
@@ -7,11 +7,7 @@
 
 {#{ form_start(form, {'action': path('crear_tipopruebaformato'), 'attr': {'novalidate': 'novalidate'}}) }#}
 
-{% if mode == "edit" %}
 {{ form_start(form, {'action': path('editar_inscripcion', {'sidCom': sidCom, 'atl': idAtl})}) }}
-{% elseif mode == "del" %}
-{{ form_start(form, {'action': path('editar_inscripcion', {'sidCom': sidCom, 'atl': idAtl})}) }}
-{% endif %}
 
     {{ form_errors(form) }}
     
@@ -20,17 +16,12 @@
        <div class="panel-body">
           <table class="table-responsive table-condensed">
              <tbody id="form-collection">
-                <tr><th>Prueba</th><th>Precio</th><th>Estado</th><th></th></tr>
+                <tr><th>Prueba</th><th>Precio</th><th>Estado</th></tr>
                 {% for ins in form.inscripciones %}
                 <tr class="subform-row">
                    <td>{{ ins.vars.value.sidPru.sidTprm.sidTprf.nombre }}. {% if ins.vars.value.sidPru.sidTprm.sexo == 0 %}Masculino, {% elseif ins.vars.value.sidPru.sidTprm.sexo == 1 %}Femenino, {% endif%}{{ ins.vars.value.sidPru.sidTprm.entorno }}</td>
-                   {% if mode == "edit" %}
                    <td>{{ form_widget(ins.coste) }}{{ form_errors(ins.coste) }}</td>
                    <td>{{ form_widget(ins.estado) }}{{ form_errors(ins.estado) }}</td>
-                   {% elseif mode == "del" %}
-                   <td>ESTADO</td>
-                   <td><button type="button" class="btn btn-sm btn-danger" onClick=""><span class="glyphicon glyphicon-remove" aria-label="Eliminar"></span></button></td>
-                   {% endif %}
                 </tr>
                 {% endfor %}
              </tbody>
@@ -43,3 +34,4 @@
 {{ form_end(form) }}
    </div>
 
+   
