--- a/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/list_inscripcion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/list_inscripcion.html.twig
@@ -94,15 +94,20 @@
                         <th class="hidden-xs">Registrar marca</th>
                      </tr>
                      {% for ins in atl.pruebas %}
+                        {% if ins.sexo == 0 %}
+                           {% set nombrePru = ins.nombre ~ '. Masculino, ' ~ ins.entorno %}
+                        {% elseif ins.sexo == 1 %}
+                           {% set nombrePru = ins.nombre ~ '. Femenino, ' ~ ins.entorno %}
+                        {% endif %}
                         <tr>
-                           <td><span class="glyphicon glyphicon-chevron-right"></span> {{ ins.nombre }}. {% if ins.sexo == 0 %}Masculino, {% elseif ins.sexo == 1 %}Femenino, {% endif%}{{ ins.entorno }}</td>
+                           <td><span class="glyphicon glyphicon-chevron-right"></span> {{ nombrePru }}</td>
                            <td class="hidden-xs">{{ ins.fecha|date('d/m/Y') }}</td>
                            <td class="hidden-xs">{{ ins.origen }}</td>
                            <td class="hidden-xs">{% if ins.codGrupo is not null %}{{ ins.codGrupo }} <button type="button" class="btn btn-xs btn-default pull-right" data-toggle="tooltip" data-placement="top" title="Mostrar grupo" onClick="showModal()"><span class="glyphicon glyphicon-info-sign"></span></button>{% endif %}</td>
                            <td class="hidden-xs">{{ ins.coste|number_format(2, ',', '.') }}€</td>
                            <td>{{ ins.estado }}</td>
-                           <td>0 <button disabled type="button" class="btn btn-xs btn-default pull-right visible-xs" onClick="showModal()"><span class="glyphicon glyphicon-dashboard" aria-label="Registrar marcas"></span></button></td>
-                           <td class="hidden-xs"><button disabled type="button" class="btn btn-xs btn-block btn-default" onClick="showModal()"><span class="glyphicon glyphicon-dashboard" aria-label="Registrar marcas"></span></button></td>
+                           <td>0 <button type="button" class="btn btn-xs btn-default pull-right visible-xs" onClick="showModal('newINT', {{ ins.sid }}, '{{ nombrePru }}', null)"><span class="glyphicon glyphicon-dashboard" aria-label="Registrar marcas"></span></button></td>
+                           <td class="hidden-xs"><button type="button" class="btn btn-xs btn-block btn-default" onClick="showModal('newINT', {{ ins.sid }}, '{{ nombrePru }}', null)"><span class="glyphicon glyphicon-dashboard" aria-label="Registrar marcas"></span></button></td>
                         </tr>
                      {% endfor %}
                   </tbody>
