Registro marcas: seleccion atleta

--- a/src/Easanles/AtletismoBundle/Resources/views/Intento/pant_intento.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Intento/pant_intento.html.twig
@@ -73,10 +73,7 @@
       <div class="col-xs-12 col-sm-7">
          <label>Rondas</label>
          <table class="table table-hover table-bordered table-condensed table-striped table-responsive">
-            <tbody>
-               <tr>
-                  <th>Id</th><th>#</th><th>Nombre</th><th>Marca</th><th>Registrar</th>
-               </tr>
+            <tbody id="select-ron">
             </tbody>
          </table>
       </div>
