Registro marcas: cargar formulario

--- a/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/sel_confirmar.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/sel_confirmar.html.twig
@@ -36,7 +36,7 @@
    </table>
    
    <div class="pull-right">
-      <button id="btn-inscribir" type="button" class="btn btn-lg btn-primary" onClick=""><span class="glyphicon glyphicon-save"></span> Inscribir</button>
+      <button id="btn-inscribir" type="button" class="btn btn-lg btn-primary" onClick="submitData()"><span class="glyphicon glyphicon-save"></span> Inscribir</button>
    </div>
    
    
