--- a/src/Easanles/AtletismoBundle/Resources/views/Intento/form_intento.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Intento/form_intento.html.twig
@@ -13,19 +13,46 @@
 {{ form_start(form, {'action': path('crear_intento', {'ron': sidRon, 'atl': idAtl})}) }}
 
     {{ form_errors(form) }}
-    
-    <table class="table">
-       <tbody>
+    <div class="panel-body">
+    <table class="table table-condensed">
+       <tbody{% if numIntentos > 1 %} id="form-collection" data-prototype='
+                <tr class="subform-row">
+                   <td class="hidden-xs count-td"></td>
+                   <td colspan="2">
+                      <div class="input-group">
+                         {% if unidades == "segundos" %}
+                            {{ form_widget(form.intentos.vars.prototype.marca)|e }}
+                         {% else %}
+                            {{ form_widget(form.intentos.vars.prototype.marca)|e }}
+                               <div class="input-group-addon">
+                                  {% if unidades == "metros"%} m.
+                                  {% elseif unidades == "puntosdesc" %} ptos.
+                                  {% elseif unidades == "puntosasc" %} ptos.
+                                  {% endif %}
+                               </div>
+                      </div>
+                      {% endif %}
+                      {{ form_errors(form.intentos.vars.prototype.marca) }}
+                   </td>
+                   <td>{{ form_widget(form.intentos.vars.prototype.validez) }}{{ form_errors(form.intentos.vars.prototype.validez) }}</td>
+                   <td>{{ form_widget(form.intentos.vars.prototype.premios) }}{{ form_errors(form.intentos.vars.prototype.premios) }}</td>
+                   <td><button type="button" class="btn btn-sm btn-danger" onClick="removeFormRow(this)"><span class="glyphicon glyphicon-remove" aria-label="Eliminar"></span></button></td>
+                </tr>
+             '{% endif %}>
           <tr>
-             <th{% if numIntentos == 1 %} class="hidden"{% endif %}><abbr title="Número de intento"># int.</abbr></th><th>Marca</th>
+             <th class="hidden-xs{% if numIntentos == 1 %} hidden{% endif %}"><abbr title="Número de intento"># int.</abbr></th>
+             <th colspan="2">Marca</th>
              {% if numIntentos > 1 %}<th>Validez<div class="text-muted" style="font-size: 11px;"><abbr title="Intentos inválidos máximos para fijar marca">Int. máx.</abbr>: {{ numIntentos }}</div></th>{% endif %}
              <th>Premios</th>
+             {% if numIntentos > 1 %}
+             <th><abbr title="Eliminar intento">Elim.</abbr></th>
+             {% endif %}
           </tr>
           {% set i = 1 %}
           {% for int in form.intentos %}
              <tr class="subform-row">
-                <td{% if numIntentos == 1 %} class="hidden"{% endif %}>{{ i }}</td>{% set i = i + 1 %}
-                <td>
+                <td class="hidden-xs count-td{% if numIntentos == 1 %} hidden{% endif %}">{{ i }}</td>{% set i = i + 1 %}
+                <td colspan="2">
                    {% if unidades == "segundos" %}
                       {{ form_widget(int.marca) }}
                    {% else %}
@@ -43,10 +70,18 @@
                 </td>
                 <td{% if numIntentos == 1 %} class="hidden"{% endif %}>{{ form_widget(int.validez) }}{{ form_errors(int.validez) }}</td>
                 <td>{{ form_widget(int.premios) }}{{ form_errors(int.premios) }}</td>
+                {% if numIntentos > 1 %}
+                <td><button type="button" class="btn btn-sm btn-danger" onClick="removeFormRow(this)"><span class="glyphicon glyphicon-remove" aria-label="Eliminar"></span></button></td>
+                {% endif %}
              </tr>
           {% endfor %}
-       </tbody>
+
+          </tbody>
     </table>
+    </div>
+    {% if numIntentos > 1 %}
+       <div style="text-align: center"><button type="button" class="btn btn-default" onClick="addFormRow()"><span class="glyphicon glyphicon-plus" aria-label="Añadir"></span> Añadir intento</button></td>
+    {% endif %}
     
     {{ form_rest(form) }}
  
