--- a/src/Easanles/AtletismoBundle/Resources/views/Intento/pant_intento.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Intento/pant_intento.html.twig
@@ -91,7 +91,8 @@
 {% block js %}
    <script src="{{ asset('bundles/atletismo/js/modals.js') }}"></script>
    <script src="{{ asset('bundles/atletismo/js/marcas.js') }}"></script>
-
+   <script src="{{ asset('bundles/atletismo/js/scripts.js') }}"></script>
+   
 {% endblock %}
 
 
